cluster/apps/mealie/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mealie
  labels:
    app: mealie

spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealie
  template:
    metadata:
      labels:
        app: mealie
    spec:
      containers:
        - name: mealie
          image: ghcr.io/mealie-recipes/mealie:v3.1.1
          ports:
            - containerPort: 9000
              protocol: TCP
              name: http
          volumeMounts:
            - mountPath: /app/data
              name: data-volume
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: pvc-mealie
