cluster/apps/mealie/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mealie
  labels:
    app: mealie

spec:
  ports:
    - name: http
      protocol: TCP
      port: 9000
      targetPort: http
  selector:
    app: mealie
