cluster/apps/mealie/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie
  labels:
    app: mealie
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.middlewares: traefik-oauth2-proxy-chain@kubernetescrd
    hajimari.io/enable: "true"
    hajimari.io/icon: "chef-hat"

spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - recipes.kblb.io
      secretName: my-certs-mealie
  rules:
    - host: recipes.kblb.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mealie
                port:
                  name: http
